[gd_scene load_steps=5 format=3 uid="uid://cokm5bjuku86c"]

[ext_resource type="Script" uid="uid://ch6u82bctslhl" path="res://scenes/menus/main_menu.gd" id="1"]
[ext_resource type="FontFile" uid="uid://cl4p3jkjhorjv" path="res://ui/fonts/Bitmgothic.ttf" id="3_wpljk"]
[ext_resource type="Script" uid="uid://sb4q1mwiqj2p" path="res://scenes/menus/version_label.gd" id="4_4mojg"]
[ext_resource type="Theme" uid="uid://bfslj868ae21m" path="res://ui/theme.tres" id="5"]

[node name="MainMenu" type="CenterContainer" node_paths=PackedStringArray("quit_button")]
process_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource("5")
script = ExtResource("1")
main_scene = "res://scenes/main.tscn"
quit_button = NodePath("VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/QuitButton")
can_go_back = false

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 1
theme = ExtResource("5")

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("5")

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/PanelContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("5")
theme_override_constants/separation = 16

[node name="TitleLabel" type="Label" parent="VBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("5")
theme_override_fonts/font = ExtResource("3_wpljk")
theme_override_font_sizes/font_size = 64
text = "Minieval"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("5")
theme_override_constants/separation = 16

[node name="PlayButton" type="Button" parent="VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("5")
text = "Play"

[node name="CustomGameButton" type="Button" parent="VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("5")
text = "Custom Game"

[node name="OptionsButton" type="Button" parent="VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("5")
text = "Options"

[node name="CreditsButton" type="Button" parent="VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("5")
text = "Credits"

[node name="QuitButton" type="Button" parent="VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("5")
text = "Quit"

[node name="VersionLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("5")
text = "VERSION"
horizontal_alignment = 1
script = ExtResource("4_4mojg")

[connection signal="pressed" from="VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/CustomGameButton" to="." method="_on_custom_game_button_pressed"]
[connection signal="pressed" from="VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/CreditsButton" to="." method="_on_credits_button_pressed"]
[connection signal="pressed" from="VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
